[metadata]
name = backblast
summary = Something interesting
description-file =
    README.rst
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
home-page = https://github.com/pabelanger/backblack
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[compile_catalog]
directory = backblast/locale
domain = backblast

[entry_points]
console_scripts =
    backblast-server = backblast.cmd.server:main

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = backblast/locale/backblast.pot

[files]
packages =
    backblast

[pbr]
warnerrors = True

[update_catalog]
domain = backblast
output_dir = backblast/locale
input_file = backblast/locale/backblast.pot

[upload_sphinx]
upload-dir = doc/build/html
